reordering of folders and files: - separated resets and helpers stylesheets from responsive menu css - added comments to responsive-menu.css - cleanup of html

--- a/css-responsive-menu/index.html
+++ b/css-responsive-menu/index.html
@@ -1,26 +1,11 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8 ie7"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9 ie8"> <![endif]-->
-<!--[if IE 9]>         <html class="no-js ie9"> <![endif]-->
-<!--[if gt IE 9]><!--> <html class="no-js"> <!--<![endif]-->
+<html class="no-js">
 <head>
 	<meta charset="UTF-8">
-	<!--[if IE]>
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	<meta http-equiv="imagetoolbar" content="no">
-	<![endif]-->
 	<title>CSS Responsive Menu - v.1.0</title>
 	<!-- METAS -->
-	<meta name="author" content="Daniele 'Orlmente' Messa - daniele.messa.1977 [AT] gmail.com">
-	<meta name="description" content="Daniele Messa, FrontEnd Web Developer">
-	<!-- BASIC SEO -->
-	<meta name="keywords" content="frontend, web, developer, html5, css3, javascript, jquery, php, wordpress">
-	<meta name="robots" content="all, index, follow">
-	<!-- FACEBOOK META -->
-	<meta property="og:title" content="CSS Responsive Menu - v.1.0">
-	<meta property="og:description" content="Css only responsive menu with touchscreen support">
-	<meta property="og:image" content="">
+	<meta name="author" content="Daniele 'Orlmente' Messa - 0rlm3nt3 [AT] gmail.com | https://github.com/Orlmente">
+	<meta name="description" content="Css only responsive menu with touchscreen support. Supports Chrome, FF, IE9+, Safari mobile">
 	<!-- CHANGE VIEWPORT SETTINGS AS YOU SEE FIT -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<meta name="format-detection" content="telephone=no">
@@ -28,12 +13,8 @@
 	<link rel="shortcut icon" href="assets/gfx/favicon.ico">
 	<link rel="apple-touch-icon" href="assets/gfx/apple-touch-icon.png">
 	<!-- STYLES -->
-	
-	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
-	<!--[if lt IE 9]>
-	<script type="text/javascript" src="assets/js/libs/html5-3.6-respond-1.1.0.min.js"></script>
-	<![endif]-->
-	
+	<link rel="stylesheet" type="text/css" href="assets/css/resets-and-helpers.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/responsive-menu.css">
 </head>
 <!-- ontouchstart enable menu closing on touch events outside itself -->
 <body ontouchstart="">
@@ -52,8 +33,6 @@
 				</ul>
 			</nav>
 		</div>
-		<footer>
-		</footer>
 	</div>
 </body>
 </html>
